# dan-rusty-chess

./: Cargo.toml  readme.md  tarpaulin-report.html  todo.md
.github/workflows/: main.yml
src/: app.rs  chess_board.rs  chess_move.rs  main.rs  piece.rs  square_index_finder.rs  ui.rs
