[package]
name = "chess-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
crossterm = { version = "0.19" }
unicode-width = "0.1"
clap = "2.33"


